--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -48,6 +48,7 @@ h3 {
     display: flex;
     align-items: center;
     gap: 30px;
+    width: max-content;
 
     svg {
         width: 17.5px;
@@ -58,5 +59,20 @@ h3 {
         @extend %stratos-lc-web-500;
         letter-spacing: 0.16px;
         text-transform: uppercase;
+    }
+}
+
+.section-template {
+    &__header h3 {
+        position: relative;
+
+        &::before {
+            position: absolute;
+            top: -8px;
+            left: -30px;
+            font-size: 16px;
+            line-height: 120%;
+            text-transform: uppercase;
+        }
     }
 }
