--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -14,6 +14,7 @@ body {
 body.body {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
     @include font(16px, 162%, $black-color) {
         @extend %stratos-lc-web-400;
     }
@@ -38,6 +39,22 @@ h3 {
         @extend %stratos-lc-web-500;
         text-transform: uppercase;
     }
+}
+
+.button {
+    display: flex;
+    padding: 17px 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    border: 2px solid $white-color;
+    background-color: transparent;
+    color: $white-color;
+    font-size: 14px;
+    @extend %stratos-lc-web-500;
+    line-height: 120%;
+    letter-spacing: 0.14px;
+    text-transform: uppercase;
 }
 
 .download-button {
@@ -74,5 +91,17 @@ h3 {
             line-height: 120%;
             text-transform: uppercase;
         }
+    }
+}
+
+.double-separator {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    span {
+        width: 100%;
+        height: 3px;
+        background-color: #5E5F67;
     }
 }
