added slider section

--- a/app/components/templates/section.jade
+++ b/app/components/templates/section.jade
@@ -1,5 +1,5 @@
 mixin section(variant, sectionName, title)
-    section(class="#{sectionName} #{sectionName}--#{variant}")
+    section(class="#{sectionName} section-template section-template--#{variant}")
         .container
             div(class="#{sectionName}__inner")
                 div(class="#{sectionName}__header section-template__header")
