--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -94,6 +94,10 @@ h3 {
     }
 }
 
+.section-template--dark {
+    color: $white-color;
+}
+
 .double-separator {
     display: flex;
     flex-direction: column;
