--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -2,11 +2,11 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import '../../node_modules/swiper/swiper-bundle.min';
 
-// @media (min-width: 480px) {
-//     .swiper-slide {
-//         width: 320px;
-//     }
-// }
+@media (min-width: 768px) {
+    .swiper-slide {
+        width: 590px;
+    }
+}
 
 // .pagination-bullet.swiper-pagination-bullet-active {
 //     opacity: 1;
