--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -179,13 +179,13 @@
         }
     }
 
-    &__line--left,
-    &__line--bottom,
-    &__line--right {
-        background-color: $orange-color;
-        position: fixed;
-        z-index: 1;
-    }
+    // &__line--left,
+    // &__line--bottom,
+    // &__line--right {
+    //     background-color: $orange-color;
+    //     position: fixed;
+    //     z-index: 1;
+    // }
 
     &__line--left,
     &__line--right {
@@ -380,6 +380,58 @@
         position: absolute;
         display: flex;
         align-items: flex-end;
+    }
+}
+
+.photostyle {
+    padding: 166px 0 300px;
+    background-color: #1a1a1b;
+
+    &__title::before {
+        content: "06";
+    }
+
+    &__info {
+        margin-top: 62px;
+
+        p {
+            @include font(null, 170%, $white-color);
+        }
+    }
+
+    &__slider {
+        position: relative;
+        margin-top: 80px;
+    }
+
+    &__slider-slide {
+        max-width: 590px;
+        width: 100%;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    &__slider-button {
+        width: 60px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5px;
+        border: 2px solid $white-color;
+        color: $white-color;
+
+        &__wrapper {
+            position: absolute;
+            bottom: -40px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
     }
 }
 
