--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -8,6 +8,12 @@
     }
 }
 
+@media (max-width: 480px) {
+    .swiper-slide {
+        width: 205px;
+    }
+}
+
 // .pagination-bullet.swiper-pagination-bullet-active {
 //     opacity: 1;
 // }
