--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -383,8 +383,16 @@
 }
 
 .logotype {
-    padding: 125px 0 152px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
     background-color: #f5f8fd;
+
+    &--second,
+    &--third,
+    &--fourth {
+        height: 100vh;
+    }
 
     &__body {
         display: flex;
@@ -401,15 +409,42 @@
         content: "03";
     }
 
-    &__logo {
+    &__logo-wrapper {
+        position: relative;
         margin: 0 auto;
-
-        svg {
-            width: 560px;
-            height: 121px;
+        width: 622px;
+        height: 295px;
+    }
+    
+    &__logo {
+        &--first,
+        &--second,
+        &--third,
+        &--fourth {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            @include bg-img(null, null, '../images/sprite.svg#bowl-wow-natural-balanced', no-repeat, cover, center center);
+            background-color: #f5f8fd;
+        }
+        
+        &--first {
+            background-image: url('../images/sprite.svg#bowl-wow-super-premium-blueprint');
+        }
+        
+        &--second {
+            background-image: url('../images/sprite.svg#bowl-wow-super-premium-dog');
+        }
+        
+        &--third {
+            background-image: url('../images/sprite.svg#bowl-wow-super-premium-cat');
         }
     }
-
+    
     &__text p {
         line-height: 170%;
     }
@@ -466,8 +501,8 @@
         justify-content: center;
         border-radius: 5px;
         border: 2px solid $white-color;
-        
-        @include font(32px, 120%, $white-color) {    
+
+        @include font(32px, 120%, $white-color) {
             letter-spacing: 0.32px;
             text-transform: uppercase;
         }
